--- a/Discussion forum js/discussion.html
+++ b/Discussion forum js/discussion.html
@@ -59,7 +59,7 @@
           </div>
           <div class="filterDiv recent trending">
             <div class="content">
-              <p class="question">bhukh lagi sit amet consectetu ?</p>
+              <p class="question">Lorem Capsum ipsem sit amet consectetu ?</p>
               <div class="time">09:10pm</div>
               <input type="checkbox" class="read-more-state" id="post-2" />
               <p class="read-more-wrap">
@@ -79,7 +79,7 @@
           </div>
           <div class="filterDiv trending">
             <div class="content">
-              <p class="question">momyy needs hugs sit amet consectetu ?</p>
+              <p class="question">antism jsasm ksd sfasdf sectetu ?</p>
               <div class="time">09:10pm</div>
               <input type="checkbox" class="read-more-state" id="post-3" />
               <p class="read-more-wrap">
