--- a/Discussion forum js/discussion.html
+++ b/Discussion forum js/discussion.html
@@ -40,18 +40,23 @@
         <div class="discussion-section">
           <div class="filterDiv recent">
             <div class="content">
-              <p class="question">ipsum, dolor sit amet consectetu ?</p>
+              <p class="question">Artificial Intelligence: Boon or Bane?</p>
               <div class="time">09:10pm</div>
               <input type="checkbox" class="read-more-state" id="post-1" />
               <p class="read-more-wrap">
-                aiokgfnekjafgnjmwrgfvn ,mafbv nvfb gb kjbm dg consectetur
-                adipisicing elit. ipsa explicabo deleniti nostrum vitae
-                molestias adipisci pariatur, culpa totam ipsam natus veritatis
-                voluptate cumque. Cupiditate, placeat eaque!
+                Artificial Intelligence (AI) is among the fastest-developing
+                technologies with a wide range of applications. From playing our
+                favorite music to assisting in complex surgeries, AI has made the lives of
+                humans easier by offering solutions for problems. Such a revolution in technology 
+                has been intriguing, and there has been a lot of discussion around the topic- of AI- boon or bane.
+                In this article, we will learn the advantages and disadvantages of AI and what we should expect in the future.
                 <span class="read-more-target"
-                  >Libero fuga facilis vel consectetur quos sapiente deleniti
-                  eveniet dolores tempore eos deserunt officia quis ab?In
-                  voluptate eaque neque maiores voluptatum amet?</span
+                  >When you enter a web page, you will find interactive chatbots that 
+                  suggest products/restaurants/ hotels/services based on our queries. 
+                  Chatbots are computer programs that simulate and process human conversations. 
+                  It is one of the clearest examples of artificial intelligence, as are Amazon’s Alexa,
+                  Apple’s Siri, or Microsoft’s Cortana, which we find integrated into our everyday devices. 
+                </span
                 >
               </p>
               <label for="post-1" class="read-more-trigger"></label>
@@ -59,19 +64,20 @@
           </div>
           <div class="filterDiv recent trending">
             <div class="content">
-              <p class="question">Lorem Capsum ipsem sit amet consectetu ?</p>
+              <p class="question">JavaScript is Good for Machine Learning</p>
               <div class="time">09:10pm</div>
               <input type="checkbox" class="read-more-state" id="post-2" />
               <p class="read-more-wrap">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem
-                ipsum dolor sit, amet consectetur adipisicing elit. ipsa
-                explicabo deleniti nostrum vitae molestias adipisci pariatur,
-                culpa totam ipsam natus veritatis voluptate cumque. Cupiditate,
-                placeat eaque!
+               Math.js is an extensive math library for JavaScript and Node.js.
+Math.js is powerful and easy to use. It comes with a large set of built-in functions, 
+                a flexible expression parser,
+                and solutions to work with many data types like numbers, big numbers, complex numbers,
+                fractions, units, arrays, and matrices.
                 <span class="read-more-target"
-                  >Libero fuga facilis vel consectetur quos sapiente deleniti
-                  eveniet dolores tempore eos deserunt officia quis ab?In
-                  voluptate eaque neque maiores voluptatum amet?</span
+                  >
+                  ml5.js is trying to make machine learning more accessible to a wider audience.
+The ml5 team is working to wrap machine learning functionality in friendlier ways.
+                </span
                 >
               </p>
               <label for="post-2" class="read-more-trigger"></label>
@@ -79,19 +85,14 @@
           </div>
           <div class="filterDiv trending">
             <div class="content">
-              <p class="question">antism jsasm ksd sfasdf sectetu ?</p>
+              <p class="question">General Recruitment Process</p>
               <div class="time">09:10pm</div>
               <input type="checkbox" class="read-more-state" id="post-3" />
               <p class="read-more-wrap">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem
-                ipsum dolor sit, amet consectetur adipisicing elit. ipsa
-                explicabo deleniti nostrum vitae molestias adipisci pariatur,
-                culpa totam ipsam natus veritatis voluptate cumque. Cupiditate,
-                placeat eaque!
+                The placement session for any company generally has 3 – 4 rounds. The first round is the written test, consisting of Quantitative aptitude, Reasoning (logical ability), Verbal ability (English) , and computer science subjects (C, C++, Data Structures, Algorithms, DBMS, OS, Networks, etc.).
+For some companies, you might also have a coding round, which is sometimes taken as a separate round and sometimes is clubbed with the written test.
                 <span class="read-more-target"
-                  >Libero fuga facilis vel consectetur quos sapiente deleniti
-                  eveniet dolores tempore eos deserunt officia quis ab?In
-                  voluptate eaque neque maiores voluptatum amet?</span
+                  >For Placements Round 2 (Coding Test), you need to be familiar with competitive programming. You can practice competitive programming on practice.geeksforgeeks.org. You can also refer company specific coding questions and topic specific coding questions.</span
                 >
               </p>
               <label for="post-3" class="read-more-trigger"></label>
@@ -99,22 +100,16 @@
           </div>
           <div class="filterDiv recent">
             <div class="content">
-              <p class="question">hello nice heheh amet consectetu ?</p>
+              <p class="question">What are the important topics in coding for placement?</p>
               <div class="time">09:10pm</div>
               <input type="checkbox" class="read-more-state" id="post-4" />
               <p class="read-more-wrap">
-                consectetur adipisicing elit. Lorem Lorem ipsum dolor, sit amet
-                consectetur adipisicing elit. Corporis vero harum atque iusto
-                natus repellat delectus laboriosam eius magnam sunt saepe sed
-                dolor, quaerat illum nihil voluptatibus inventore minus soluta.
-                ipsum dolor sit, amet consectetur adipisicing elit. ipsa
-                explicabo deleniti nostrum vitae molestias adipisci pariatur,
-                culpa totam ipsam natus veritatis voluptate cumque. Cupiditate,
-                placeat eaque!
+                For placement point of view, if you command on c/c++ then you have the clear
+                knowledge of basic concept such as preincrement, post incriment, basic logics with 
+                if else, knowledge about scoping, pointers, functions and read about opps.
+If u are good in data structures and algorithm, go through it’s conceptual part. It will give you plus point.
                 <span class="read-more-target"
-                  >Libero fuga facilis vel consectetur quos sapiente deleniti
-                  eveniet dolores tempore eos deserunt officia quis ab?In
-                  voluptate eaque neque maiores voluptatum amet?</span
+                  >If you're a programmer, it's acceptable if you can't create web applications using Django or React. Still, it's unacceptable if you don't understand how hash tables operate or when to use a list instead of an array. </span
                 >
               </p>
               <label for="post-4" class="read-more-trigger"></label>
